<resources>
    <string name="app_name">OrmLite</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="toolbar_title">Toolbar Title</string>
    <string name="add_food">Add Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="button_order">Make Order</string>
    <string name="notification_title">Success Order</string>
    <string name="notification_text">Your meal will be ready shortly</string>

    <!--CheckBoxPreference-->
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>

    <string name="allow_message_summary">Show messages in stats bar when they arrive</string>
    <string name="show_message_title">Allow showing message</string>

    <!--ListPreference-->
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <!-- AboutDialog -->
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This is the Example18 app which demonstrates usage of toasts, notifications, dialogs, preferences, toolbars and navigation drawers</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="action_refresh">Good Way to Sync</string>
    <string name="action_add">Bad Way to Sync</string>
    <string name="action_edit">Edit Food Executed</string>
    <string name="action_delete">Delete Food Executed</string>

    <!-- Drawer-->
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Products</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_Settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>

    <!--SimpleReceiver prepareNotification-->
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="dialog">Comment Dialog</string>
    <string name="no_comment">NO COMMENT</string>
    <string name="add_dialog">Add Dialog</string>
    <string name="read">Read From File</string>
    <string name="write">Write To File</string>
    <string name="allow_message">allow_message</string>
    <string name="test">Test</string>
    <string name="fragment_master_action_refresh">Refresh</string>
    <string name="fragment_master_action_add">Add</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_update">Update</string>
    <string name="fragment_master_action_image">Show Image</string>


</resources>
