<?xml version="1.0" encoding="utf-8" ?>
<!-- PreferenceScreen represents a top-level Preference that is the root of a Preference hierarchy. -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen">
    <!--<CheckBoxPreference-->
        <!--android:key="wifi enabled"-->
        <!--android:title="WiFi" />-->
    <!--<PreferenceScreen-->
        <!--android:key="second_preferencescreen"-->
        <!--android:title="WiFi settings">-->
        <!--<CheckBoxPreference-->
            <!--android:key="prefer wifi"-->
            <!--android:title="Prefer WiFi" />-->
        <!--... other preferences here ...-->
    <!--</PreferenceScreen>-->


    <!--  CheckBoxPreference will store a boolean into the SharedPreferences. -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_sync"
        android:summary="@string/pref_sync_summ"
        android:title="@string/pref_sync_title"/>

    <!-- ListPreference will store a string into the SharedPreferences (this string will be the value from the array).-->
    <ListPreference
        android:dependency="@string/pref_sync"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/pref_syncConnectionTypes_entries"
        android:entryValues="@array/pref_syncConnectionTypes_values"
        android:key="@string/pref_sync_list"
        android:title="@string/pref_syncConnectionType"
        android:summary="%s"
        android:defaultValue="1"/>

</PreferenceScreen>